# AUN_Backend

./: Dockerfile  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 712dd472f480_create_users_table.py  a4f2e9c81b3d_add_recipe_taste_axes.py  a8e3b7c4f291_extend_user_profile_and_consent.py  b7d3e8a92f51_add_user_is_admin.py  b8e4f1c92d57_add_blocknote_html_and_draft.py  c1f8a3d92e47_create_sake_pairing_event_tables.py  c8e4a2b71d63_add_recipe_cooking_and_image_urls.py  c9a52e3f7b18_add_sakana_description.py  d1f48b6e3a92_add_sake_purchase_url.py  d9f5b3c84e72_pairing_item_fk_refactor.py  daf951727416_create_journal_entry_table.py  e1c7f4d8a9b3_add_article_tables.py  e2b9c4f1a7d3_replace_purchase_url_with_amazon_rakuten.py  f3a8c5b7d291_add_sakana_category.py  f7d2a1c93e58_rename_recipe_to_sakana.py  g2a4c8e1f93b_add_is_featured_to_pairing_category.py  h3b5d9f2e04c_add_sake_id_fk_to_journal_entry.py
app/api/: deps.py
app/api/v1/: router.py  schemas.py
app/api/v1/endpoints/: admin_data.py  (+15 more)
app/core/: article_seed_data.py  config.py  database.py  pairing_score.py  pairing_seed_data.py  persona_profile.py  security.py
app/models/: __init__.py  article.py  event.py  journal.py  pairing_guide.py  sake.py  user.py
scripts/: create_admin.py  debug_pairing_top3.py  diagnose_misses.py  entrypoint.sh  import_sake_csv.py  seed_articles.py  seed_demo_journal.py  seed_pairing_guide.py  seed_sake.py  validate_pairing_rules.py
tests/: conftest.py  test_articles.py  test_auth.py  test_journal.py  test_pairing_guide.py  test_quiz_results.py  test_sake.py
